# apple-private-apis

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: rust.yml
apple-codesign-wrapper/: Cargo.toml  README.md
apple-codesign-wrapper/src/: cert.p12  dummy_bundle_id.rs  lib.rs
apple-codesign-wrapper/src/test.app/: Assets.car  Info.plist  SideJIT  embedded.mobileprovision
apple-codesign-wrapper/src/test.app/_CodeSignature/: CodeResources
apple-dev-apis/: Cargo.toml
apple-dev-apis/src/: lib.rs  session.rs
apple-dev-apis/tests/: xcsession.rs
icloud-auth/: .gitignore  Cargo.toml
icloud-auth/rustcrypto/: Cargo.toml
icloud-auth/rustcrypto-srp/: Cargo.toml
icloud-auth/rustcrypto-srp/src/: client.rs  server.rs  types.rs  utils.rs
icloud-auth/src/: anisette.rs  client.rs  client_ureq.rs  lib.rs  login.rs  request.rs
icloud-auth/tests/: auth_debug.rs  gsa_auth.rs  root_write.rs
omnisette/: Cargo.toml
omnisette/src/: adi_proxy.rs  anisette_headers_provider.rs  aos_kit.rs  lib.rs  remote_anisette.rs  remote_anisette_v3.rs  store_services_core.rs
omnisette/src/store_services_core/: posix_macos.rs  posix_windows.rs
