[package]
name = "apple-dev-apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87" }
reqwest = { version = "0.11.14", features = ["blocking", "json", "default-tls"] }
plist = { version = "1.3.1" }
omnisette = {path = "../omnisette"}
icloud_auth = {path = "../icloud-auth"}
hmac = "0.12.1"
sha2 = "0.10.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
