[package]
name = "omnisette"
version = "0.1.0"
edition = "2021"

[features]
remote-anisette = []
default = ["remote-anisette"]

[dependencies]
anyhow = "1.0"
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
plist = "1.4.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
android-loader = { git = "https://github.com/Dadoum/android-loader" }
libc = "0.2.139"
rand = "0.8.4"
machineid-rs = "1.2.2"

[target.'cfg(target_family = "windows")'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation"
]

[target.'cfg(target_os = "macos")'.dependencies]
dlopen2 = "0.4.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
