[package]
name = "omnisette"
version = "0.1.0"
edition = "2021"

[features]
remote-anisette = []
default = ["remote-anisette"]

[dependencies]
anyhow = "1.0"
base64 = "0.21.0"
hex = "0.4.3"
machineid-rs = "1.2.2"
plist = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = { version = "0.10.6" }
uuid = { version = "1.3.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
android-loader = { git = "https://github.com/Dadoum/android-loader" }
libc = "0.2.139"
rand = "0.8.4"

[target.'cfg(target_os = "macos")'.dependencies]
dlopen2 = "0.4.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
