[package]
name = "omnisette"
version = "0.1.0"
edition = "2021"

[features]
remote-anisette = []
async = ["dep:async-trait"]
default = ["remote-anisette", "dep:remove-async-await"]
remote-anisette-v3 = ["async", "dep:serde", "dep:serde_json", "dep:tokio-tungstenite", "dep:futures-util", "dep:chrono"]

[dependencies]
anyhow = "1.0"
base64 = "0.21"
hex = "0.4"
plist = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1.3", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
android-loader = { git = "https://github.com/Dadoum/android-loader", branch = "bigger_pages" }
libc = "0.2"
log = "0.4"
async-trait = { version = "0.1", optional = true }
remove-async-await = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }
tokio-tungstenite = { version = "0.20.1", optional = true, features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3.28", optional = true }
chrono = { version = "0.4.37", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
dlopen2 = "0.4"
objc = "0.2"
objc-foundation = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
simplelog = "0.12"
